--- a/lang/en.json
+++ b/lang/en.json
@@ -95,6 +95,7 @@
   "select-car-5": "29-seat coach",
   "select-car-6": "35-seat coach",
   "select-car-7": "45-seat coach",
+  "Other-vehicles": "Other vehicles",
  
   "ABOUT PAGE": "--------------------------------------------------------------------------------------------------------------------------------------------------------------",
   "title-pl": "SPACE AND AREA OF CHILLAX RESTAURANT",
@@ -118,7 +119,7 @@
   "drinkMenu.title": "CHILLAX DRINK MENU",
   "drinkMenu.coffeeSalt": "SALTED COFFEE",
   "drinkMenu.coffeeCoconut": "COCONUT COFFEE",
-  "drinkMenu.coffeeHell": "HELLFIRE COFFEE",
+  "drinkMenu.cappucino": "CAPPUCCINO",
   "drinkMenu.bacXiu": "BAC XIU (MILK COFFEE)",
   "drinkMenu.gingerHerbalTea": "GINGER HERBAL TEA",
   "drinkMenu.lemonLicoriceTea": "LEMON LICORICE TEA",
@@ -189,7 +190,7 @@
   "europeMenu.saladTaoHatOcCho": "APPLE & WALNUT SALAD",
   "europeMenu.miYCaHoi": "SPAGHETTI WITH SALMON",
   "europeMenu.miYSotKem": "SPAGHETTI WITH CREAM SAUCE",
-  "europeMenu.supCaChua": "TOMATO SOUP",
+  "europeMenu.supBiDo": "PUMPKIN SOUP",
   "europeMenu.supKhoaiTayNghien": "MASHED POTATO SOUP",
   "europeMenu.thanHeoDutLo": "BAKED PORK TENDERLOIN",
   "europeMenu.ucGaCuonPhoMai": "CHEESE-STUFFED CHICKEN BREAST",
