--- a/lang/en.json
+++ b/lang/en.json
@@ -84,9 +84,9 @@
   "label-people": "Number of Guests:",
   "label-date": "Reservation Date:",
   "label-time": "Dining Time:",
-  "label-message": "Requirements:",
+  "label-message": "Other requests:",
   "btn-submit": "Submit Reservation",
-  "label-vehicle": "Type of Vehicle",
+  "label-vehicle": "Vehicle to restaurant:",
   "select-car": "-- Select vehicle type --",
   "select-car-1": "Motorbike",
   "select-car-2": "4-seat car",
