--- a/lang/vi.json
+++ b/lang/vi.json
@@ -84,9 +84,9 @@
   "label-people": "Số người:",
   "label-date": "Ngày đặt:",
   "label-time": "Giờ ăn:",
-  "label-message": "Các yêu cầu:",
+  "label-message": "Các yêu cầu khác:",
   "btn-submit": "Gửi đặt bàn",
-  "label-vehicle": "Loại xe",
+  "label-vehicle": "Phương tiện đến nhà hàng:",
   "select-car": "-- Chọn loại xe --",
   "select-car-1": "Xe máy",
   "select-car-2": "Xe ô tô 4 chỗ",
